--- a/templates/forum/details.html
+++ b/templates/forum/details.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block headline-sub %}
-    <p class="subtitle">{{ forum.subtitle }}</p>
+    {{ forum.subtitle }}
 {% endblock %}
 
 {% block breadcrumb %}
