--- a/templates/tutorial/import_tutorial.html
+++ b/templates/tutorial/import_tutorial.html
@@ -10,11 +10,45 @@
 {% endblock %}
 
 {% block breadcrumb %}
-    <li class="current"><a href="#">Nouveau tutoriel</a></li>
+    <li class="current"><a href="#">Import de tutoriel</a></li>
 {% endblock %}
 
 {% block content %}
 
-{% crispy form %}
+
+<div class="large-6 columns">
+	<h2 class="box">Upload des fichiers</h2>
+	{% crispy form %}
+</div>
+
+{% if old_tutos %}
+    <div class="large-6 columns">
+        <h2 class="box">Tutos SDZ liés</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>Tuto</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for id, titre, tuto, image, logo in old_tutos %}
+            <tr>
+              <td>{{titre}}</td>
+              <td>
+              	<form name="form-import" method="POST" action="{% url "zds.tutorial.views.local_import" %}">
+              		<input type="hidden" name="tuto" value="{{tuto}}" />
+              		<input type="hidden" name="images" value="{{image}}" />
+              		<input type="hidden" name="logo" value="{{logo}}" />
+              		<input type="submit" name="valider" value="Importer" class="tiny button radius" />
+              		{% csrf_token %}
+              	</form>
+              </td>
+            </tr>
+          </tbody>
+          {% endfor %}
+        </table>
+    </div>
+{% endif %}
 
 {% endblock %}
