As we don't keep alerts history, show only actives alerts number

--- a/templates/member/base_read.html
+++ b/templates/member/base_read.html
@@ -53,7 +53,7 @@
     		Nombres de messages modérés<span class="label right secondary">{{ profile.get_invisible_posts_count }}</span>
 		</li>
 		<li>
-    		Nombres d'alertes déclarées<span class="label right secondary">{{ profile.get_alerts_posts_count }}</span>
+    		Nombres d'alertes actives<span class="label right secondary">{{ profile.get_alerts_posts_count }}</span>
 		</li>
 	</li>
 	<li>
