--- a/templates/source.html
+++ b/templates/source.html
@@ -148,18 +148,17 @@
           </li>
           {% if perms.forum.change_post %}
           <li class="has-dropdown">
-            {% with posts=user|alerts_topic %}
+            {% with alerts=user|alerts_list %}
             <a href="#">
-              {% if posts.count > 0 %}
-                  <span class="alert label round">{{ user|alerts_count }}</span>
+              {% if alerts.count > 0 %}
+                  <span class="alert label round">{{ alerts.count }}</span>
               {% endif %}
               <img src="{% static "img/gear.png" %}" alt="Alertes" /> <span class="hide-for-large-up">Modération</span></a>
             <ul class="dropdown">
               <li><label>Alertes Modération</label></li>
               <li class="divider"></li>
                 
-                  {% for post in posts %}
-                  {% for alert in post.alerts.all %}
+                  {% for alert in alerts %}
                       <li><a href="{{ post.get_absolute_url }}">
                           <div class="row">
                             <div class="large-12 columns">
@@ -171,14 +170,13 @@
                               </div>
                             </div>
                             <div class="large-12 columns">
-                                {{ post.topic.title }}
+                                {{ alert.get_scope_display }}
                             </div>
                           </div>
                           </a>
                       </li>
                   {% endfor %}
-                  {% endfor %}
-                  {% if posts.count = 0 %}
+                  {% if alerts.count = 0 %}
                       <li class="dropdown-empty-message">
                         <a href="#">
                         <div class="row"><div class="large-5 columns centered">
