--- a/assets/css/scss/_mobile-tablet.scss
+++ b/assets/css/scss/_mobile-tablet.scss
@@ -412,7 +412,7 @@
 
 
 /* ====================
-    MOBILE ONLY: Content positionning
+    Content positionning
    ==================== */
 
     .main {
@@ -450,9 +450,8 @@
 
 
 /* ====================
-    MOBILE ONLY: Forums
+    Forums
    ==================== */
-    
 
     .main .content-container .forum-message {
         padding: 20px 0;
