--- a/templates/base.html
+++ b/templates/base.html
@@ -468,7 +468,7 @@
                         {% for message in messages %}
                             <div class="alert-box {{ message.tags }}">
                                 <span>{{ message }}</span>
-                                <a href="#" class="close">&times;</a>
+                                <a href="#close-alert-box" class="close-alert-box ico-after cross white">Masquer l'alerte</a>
                             </div>
                         {% endfor %}
                     {% endif %}
