--- a/templates/forum/topic/index.html
+++ b/templates/forum/topic/index.html
@@ -160,7 +160,7 @@
 
         <li>
             <a href="#move-topic" class="ico-after arrow-right blue open-modal">Déplacer le sujet</a>
-            <div class="modal">
+            <div class="modal modal-small" id="move-topic">
                 {% crispy form_move %}
             </div>
         </li>
