--- a/templates/mp/index.html
+++ b/templates/mp/index.html
@@ -9,37 +9,14 @@
 
 
 
-{% block headline %}
-   Liste des conversations
-{% endblock %}
-
-
-
 {% block breadcrumb %}
     <li>Liste des conversations</li>
 {% endblock %}
 
 
 
-{% block sidebar_actions %}
-    <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions">
-        <h3>Actions</h3>
-        <ul>
-            <li><a href="{% url "zds.mp.views.new" %}">Nouvelle conversation</a></li>
-            <li>
-                <a href="#delete-conversations">Supprimer les conversations</a>
-                {# FIXME : Je pense qu'il manque une url pour le formulaire #}
-                <form action="" method="POST" id="delete-conversations">
-                    <p>
-                        Attention, vous vous appretez à supprimer toutes les conversations sélectionnées.
-                    </p>
-                    
-                    {% csrf_token %}
-                    <button type="submit" name="delete" class="button expand alert tiny">Confirmer</button>
-                </form>
-            </li>
-        </ul>
-    </div>
+{% block headline %}
+   Liste des conversations
 {% endblock %}
 
 
@@ -92,4 +69,27 @@
     </div>
 
     {% include "misc/pagination.part.html" with position='bottom' %}
+{% endblock %}
+
+
+
+{% block sidebar_actions %}
+    <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions">
+        <h3>Actions</h3>
+        <ul>
+            <li><a href="{% url "zds.mp.views.new" %}">Nouvelle conversation</a></li>
+            <li>
+                <a href="#delete-conversations" class="open-modal">Supprimer les conversations</a>
+                {# FIXME : Je pense qu'il manque une url pour le formulaire #}
+                <form action="" method="POST" id="delete-conversations" class="modal modal-small">
+                    <p>
+                        Attention, vous vous appretez à supprimer toutes les conversations sélectionnées.
+                    </p>
+                    
+                    {% csrf_token %}
+                    <button type="submit" name="delete" class="btn">Confirmer</button>
+                </form>
+            </li>
+        </ul>
+    </div>
 {% endblock %}
