good url email : issue #470

--- a/templates/mp/topic.html
+++ b/templates/mp/topic.html
@@ -69,7 +69,7 @@
 {% for post in posts %}
 <div class="row">
     <div class="large-12 columns">
-        <div class="large-1 columns">
+        <div class="large-1 columns avatar-forum">
             <div class="centered">
             <a href="{{ post.author.get_absolute_url }}" class="username">{{ post.author.username }}</a>
             </div>
