--- a/templates/tutorial/note.part.html
+++ b/templates/tutorial/note.part.html
@@ -5,7 +5,7 @@
 {% load staticfiles %}
 <div class="row">
     <div class="large-12 columns">
-        <div class="large-1 columns">
+        <div class="large-1 columns avatar-forum">
             <div class="centered">
             <div class="username"><a href="{{ post.author.get_absolute_url }}">{{ post.author.username }}</a></div>
             </div>
