--- a/templates/source.html
+++ b/templates/source.html
@@ -186,7 +186,7 @@
                       </li>
                   {% endif %}
                 <li class="divider"></li>
-              <li><a href="#"><div class="row"><div class="large-5 columns centered">Toutes les alertes</div></div></a></li>
+              <li><a href="{% url "zds.pages.views.alerts" %}"><div class="row"><div class="large-5 columns centered">Toutes les alertes</div></div></a></li>
             </ul>
             {% endwith %}
           </li>
