--- a/templates/misc/message_user.html
+++ b/templates/misc/message_user.html
@@ -4,7 +4,7 @@
 
 <div class="user">
     {% with profile=member|profile %}
-        <a href="{{ user.get_absolute_url }}" class="avatar-link">
+        <a href="{{ member.get_absolute_url }}" class="avatar-link">
             <img src="{{ profile.get_avatar_url }}" alt="" class="avatar">
         </a>
         {% with status=member|state %}
