add alerts for tutos an articles invalidations : issue #484

--- a/templates/member/profile.html
+++ b/templates/member/profile.html
@@ -84,7 +84,7 @@
     </div>
 
     <div class="large-6 columns">
-        <h2 class="box tutoriel">Dernier tutoriels</h2>
+        <h2 class="box tutoriel">Derniers tutoriels</h2>
         {% if tutorials %}
             {% for tutorial in tutorials %}
             <div class="row">
@@ -100,7 +100,7 @@
         {% endif %}
     </div>
     <div class="large-6 columns">
-        <h2 class="box article">Dernier articles</h2>
+        <h2 class="box article">Derniers articles</h2>
         {% if articles %}
             {% for article in articles %}
             <div class="row">
